# lm-similarity

./: .gitignore  README.md  pyproject.toml
applications/: README.md  requirements.txt
applications/Annotators/: README.md
applications/Annotators/src/: compute_w2s.py  metrics.py  scatters.ipynb  visualizations.py
applications/Annotators/src/w2s/: gen_combi.sh  run.sh  sft_config.py
applications/Capabilities/: README.md  run_CAPA_compute.sh
applications/Capabilities/src/: CAPA_gen.py  combine_BBH.py  data_extraction.py  dataset_dump.py  filter_MMLU.py  model_bin_generation.py  openllm_model_dump.py
applications/Judges/: README.md
applications/Judges/mmlu_pro_free/: _default_template_yaml.yaml  mmlu_pro_biology.yaml  mmlu_pro_business.yaml  mmlu_pro_chemistry.yaml  mmlu_pro_computer_science.yaml  mmlu_pro_economics.yaml  mmlu_pro_engineering.yaml  mmlu_pro_health.yaml  mmlu_pro_history.yaml  mmlu_pro_law.yaml  mmlu_pro_math.yaml  mmlu_pro_other.yaml  mmlu_pro_philosophy.yaml  mmlu_pro_physics.yaml  mmlu_pro_psychology.yaml  utils.py
applications/Judges/src/: 1_filter_mmlu_pro.py  2_calculate_similarity.py  3_run_mmlu_free.sh  4_filter_and_merge.py  5.1_ensemble_accuracy.py  5_llm_judge.py  6_results_judge_similarity.ipynb  settings.yaml  utils.py
examples/: README.md  settings.yaml
examples/mmlu_pro/: compute_sim.py
lmsim/: metrics.py
src/lmsim/: metrics.py
