[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "lm-similarity"
version = "0.0.0"
authors = [
  { name="Ilze Amanda Auzina", email="ilze.amanda.auzina@outlook.com" },
]
description = "Python package to compute similarity between LMs"
readme = "README.md"
requires-python = ">=3.11"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
license = {text = "MIT"}